refactor(core): add maybe-async support for FlashDevice and unified ops
Add maybe-async macros to FlashDevice trait and all code that uses it,
enabling both sync and async code paths from a single codebase:

- FlashDevice trait: read/write/erase and WP methods now use async fn
- SpiFlashDevice/OpaqueFlashDevice: updated impls with #[maybe_async(AFIT)]
- unified.rs: all smart write, layout, and verify operations
- wp/ops.rs: all write protection functions
- layout/flash.rs: IFD and FMAP reading from flash
- protocol/spi25.rs: all SPI protocol functions
- sfdp/parser.rs: SFDP probing functions
- serprog: transport trait and device implementation

The is_sync feature flag controls which mode is used:
- With is_sync: async/await stripped, code is synchronous
- Without is_sync: full async support for WASM/web, Embassy, tokio

This prepares the codebase for the web interface which will use
WebSerial/WebUSB with async I/O in the browser.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ repository = "https://github.com/user/rflasher"
 
 [workspace.dependencies]
 # Internal crates
-rflasher-core = { path = "crates/rflasher-core", default-features = false }
+rflasher-core = { path = "crates/rflasher-core", default-features = false, features = ["is_sync"] }
 
 # Core
 bitflags = "2"
@@ -54,6 +54,7 @@ prettyplease = "0.2"
 # no_std compatible
 heapless = { version = "0.8", features = ["serde"] }
 once_cell = { version = "1.21", default-features = false }
+maybe-async = "0.2"
 
 [package]
 name = "rflasher"
