fix(wasm): resolve WebSerial read hanging at 256KB
The read operation was getting stuck after exactly 256KB (64 chunks) due to
WebSerial flow control issues. Fixed by:

- Setting bufferSize to 64KB (up from default 255 bytes)
- Enabling hardware flow control (RTS/CTS)
- Awaiting writer.ready before writes to handle backpressure

Also improved the UI:
- Added verify operation with progress reporting
- Throttled progress updates to every 64KB to reduce overhead
- Fixed status log colors (white text was invisible on light backgrounds)
- Added yield_to_browser() to keep WebSerial responsive during long operations

--- a/crates/rflasher-wasm/Cargo.toml
+++ b/crates/rflasher-wasm/Cargo.toml
@@ -37,9 +37,17 @@ web-sys = { version = "0.3", features = [
     "Document",
     "Element",
     "HtmlCanvasElement",
+    "HtmlInputElement",
+    "HtmlAnchorElement",
     "ReadableStream",
     "WritableStream",
     "WritableStreamDefaultWriter",
+    "File",
+    "FileList",
+    "FileReader",
+    "Blob",
+    "BlobPropertyBag",
+    "Url",
     "console",
 ] }
 
