feat(core): add static-chips feature for embedded chip database
- Update codegen to emit String instead of &str for vendor/name fields
- Add static-chips feature flag to optionally include compiled chip DB
- ChipDatabase::new() now returns pre-populated DB when feature enabled
- Add ChipDatabase::empty() for explicit empty database creation

--- a/crates/rflasher-wasm/Cargo.toml
+++ b/crates/rflasher-wasm/Cargo.toml
@@ -14,7 +14,7 @@ default = []
 [dependencies]
 # Internal crates (async mode - explicitly NO is_sync feature)
 # We override the workspace dependency to ensure async mode for WASM
-rflasher-core = { path = "../rflasher-core", default-features = false, features = ["std", "alloc"] }
+rflasher-core = { path = "../rflasher-core", default-features = false, features = ["std", "alloc", "static-chips"] }
 rflasher-serprog = { path = "../rflasher-serprog", default-features = false, features = ["std"] }
 
 # GUI
