--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,11 @@ members = [
     "crates/rflasher-raiden",
     "crates/rflasher-repl",
     "crates/rflasher-wasm",
+    "crates/postcard-spi-icd",
+    "crates/rflasher-postcard-spi",
 ]
-# Exclude WASM crate from default build (requires wasm32 target)
+
+# Exclude WASM crate and firmware from default build (requires different targets)
 default-members = [
     ".",
     "crates/rflasher-core",
@@ -38,6 +41,13 @@ default-members = [
     "crates/rflasher-dummy",
     "crates/rflasher-raiden",
     "crates/rflasher-repl",
+    "crates/postcard-spi-icd",
+    "crates/rflasher-postcard-spi",
+]
+
+# Firmware is excluded from workspace due to different target
+exclude = [
+    "firmware/pico-postcard-spi",
 ]
 
 [workspace.package]
@@ -100,12 +110,13 @@ linux-mtd = ["rflasher-flash/linux-mtd"]
 linux-gpio = ["rflasher-flash/linux-gpio"]
 internal = ["rflasher-flash/internal"]
 raiden = ["rflasher-flash/raiden"]
+postcard-spi = ["rflasher-flash/postcard-spi"]
 
 # REPL feature for scripting with Steel Scheme
 repl = ["dep:rflasher-repl"]
 
 # Enable all programmers
-all-programmers = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ftdi", "ft4222", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden"]
+all-programmers = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ftdi", "ft4222", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden", "postcard-spi"]
 
 [dependencies]
 rflasher-core = { workspace = true, features = ["std", "is_sync"] }
