refactor(postcard-spi): simplify to transaction-oriented batch API
Replace individual RPC endpoints (SetCs, Delay, SpiTransfer) with a single
BatchEndpoint that executes multiple SPI transactions efficiently. This
design works better with hardware SPI controllers that handle CS automatically.

Changes:
- ICD: Add BatchOp, BatchRequest/Response types with Poll, SetCs, DelayUs ops
- Host: Add BatchBuilder API for constructing batch operations
- Host: Update set_cs() to use batch operations instead of deleted endpoint
- Firmware: Update to embassy-sync 0.7 (CriticalSectionRawMutex)
- Firmware: Update panic-probe to 1.0 for defmt 1.0 compatibility
- Firmware: Add panic="abort" to profiles for no_std builds

--- a/firmware/pico-postcard-spi/Cargo.toml
+++ b/firmware/pico-postcard-spi/Cargo.toml
@@ -39,14 +39,16 @@ portable-atomic = { version = "1", features = ["critical-section"] }
 # Logging
 defmt = "1.0"
 defmt-rtt = "0.4"
-panic-probe = { version = "0.3", features = ["print-defmt"] }
+panic-probe = { version = "1.0", features = ["print-defmt"] }
 
 [profile.release]
 debug = 2
 lto = true
 opt-level = "s"
+panic = "abort"
 
 [profile.dev]
 debug = 2
 lto = true
 opt-level = "s"
+panic = "abort"
