--- a/crates/rflasher-wasm/Cargo.toml
+++ b/crates/rflasher-wasm/Cargo.toml
@@ -41,8 +41,11 @@ web-sys = { version = "0.3", features = [
     "HtmlAnchorElement",
     "HtmlElement",
     "ReadableStream",
+    "ReadableStreamGetReaderOptions",
+    "ReadableStreamReaderMode",
     "ReadableStreamDefaultReader",
     "ReadableStreamReadResult",
+    "ReadableStreamByobReader",
     "WritableStream",
     "WritableStreamDefaultWriter",
     "File",
