ci: fix WASM build and test failures
- Add RUSTFLAGS=--cfg=web_sys_unstable_apis to WASM build job to enable WebSerial API
- Fix test_load_ron to use ChipDatabase::empty() instead of new() to avoid static chips

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,8 @@ jobs:
   wasm:
     name: WASM Build
     runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: --cfg=web_sys_unstable_apis
     steps:
       - uses: actions/checkout@v4
         with:
