fix(postcard-spi): resolve runtime and USB configuration issues
- Enter Tokio runtime context before calling try_new_raw_nusb (fixes panic)
- Use correct USB device class for IAD composite devices (0xEF/0x02/0x01)
- Increase MAX_BATCH_READ_SIZE from 64 to 1024 bytes
- Update firmware pin assignments for correct wiring
- Add thumbv6m-none-eabi target to flake.nix for firmware builds
- Enable postcard-spi in default features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,7 +95,7 @@ edition.workspace = true
 license.workspace = true
 
 [features]
-default = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ft4222", "ftdi", "linux-spi", "linux-mtd", "internal", "raiden"]
+default = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ft4222", "ftdi", "linux-spi", "linux-mtd", "internal", "raiden", "postcard-spi"]
 
 # Programmer features (passed through to rflasher-flash)
 dummy = ["rflasher-flash/dummy"]
