feat(wasm): add CH341A WebUSB programmer support to web interface
Add CH341A as a second programmer option alongside serprog in the WASM
web UI. Switch nusb to a fork with WebUSB support, update cargo config
to apply unstable web-sys flags to all wasm32 crates, and extend the
egui app with CH341A connect/disconnect and all flash operations.

Also fix unused import warning in chip database for static-chips feature.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ log = "0.4"
 thiserror = "2"
 env_logger = "0.11"
 tokio = { version = "1", features = ["full"] }
-nusb = "0.2.1"
+nusb = { git = "https://github.com/ArthuRheymans/nusb.git", branch = "task/webusb-rebased" }
 clap = { version = "4", features = ["derive"] }
 indicatif = "0.17"
 
