--- a/crates/rflasher-wasm/.cargo/config.toml
+++ b/crates/rflasher-wasm/.cargo/config.toml
@@ -1,4 +1,4 @@
-# Enable unstable web-sys APIs (WebSerial)
+# Enable unstable web-sys APIs (WebSerial, WebUSB) for ALL crates when targeting wasm32
 # See: https://wasm-bindgen.github.io/wasm-bindgen/web-sys/unstable-apis.html
-[build]
+[target.wasm32-unknown-unknown]
 rustflags = ["--cfg=web_sys_unstable_apis"]
