refactor(ch341a): unify native and WASM implementations using maybe-async
Merge the separate device.rs (native/sync) and web_device.rs (WASM/async)
into a single device.rs using maybe-async and cfg feature gating, following
the pattern established by rflasher-serprog. Both targets now share the same
pipelined USB transfer algorithm.

- Add maybe-async dependency and is_sync feature to rflasher-ch341a
- Replace Ch341aAsync with unified Ch341a type
- Use ep_wait!/ep_try! macros to abstract sync vs async nusb completion APIs
- Delete web_device.rs
- Update rflasher-wasm to use renamed Ch341a type
- Propagate is_sync feature through rflasher-flash

--- a/crates/rflasher-ch341a/Cargo.toml
+++ b/crates/rflasher-ch341a/Cargo.toml
@@ -7,13 +7,16 @@ description = "CH341A USB programmer support for rflasher"
 
 [features]
 default = ["std"]
-std = ["rflasher-core/std", "rflasher-core/is_sync", "nusb", "futures-lite"]
+std = ["rflasher-core/std", "is_sync", "nusb", "futures-lite"]
+# Sync mode - when enabled, async code is compiled as sync
+is_sync = ["rflasher-core/is_sync", "maybe-async/is_sync"]
 wasm = ["rflasher-core/std", "nusb", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]
 
 [dependencies]
 rflasher-core.workspace = true
 nusb = { workspace = true, optional = true }
 futures-lite = { version = "2", optional = true }
+maybe-async.workspace = true
 log.workspace = true
 
 # WASM dependencies (optional, only for wasm feature)
