feat(wasm): add CH347 WebUSB programmer support to web interface
Add CH347 (both T and F variants) to the WASM codepath, mirroring
the existing CH341A async/WebUSB pattern:

- Convert rflasher-ch347 to maybe_async for dual sync/async support
- Add wasm feature with WebUSB device picker (VID:1a86 PID:55db/55de)
- Introduce with_programmer! macro in the WASM app to eliminate
  per-variant match arm duplication across all operation spawners
- Add Help menu with udev rules window (CH341A, CH347T, CH347F)
- Show udev hint on WebUSB connection failures
- Propagate is_sync feature to rflasher-ch347 in rflasher-flash

--- a/crates/rflasher-ch347/Cargo.toml
+++ b/crates/rflasher-ch347/Cargo.toml
@@ -7,10 +7,28 @@ description = "CH347 USB programmer support for rflasher"
 
 [features]
 default = ["std"]
-std = ["rflasher-core/std", "nusb", "futures-lite"]
+std = ["rflasher-core/std", "is_sync", "nusb", "futures-lite"]
+# Sync mode - when enabled, async code is compiled as sync
+is_sync = ["rflasher-core/is_sync", "maybe-async/is_sync"]
+wasm = ["rflasher-core/std", "nusb", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]
 
 [dependencies]
 rflasher-core.workspace = true
 nusb = { workspace = true, optional = true }
 futures-lite = { version = "2", optional = true }
+maybe-async.workspace = true
 log.workspace = true
+
+# WASM dependencies (optional, only for wasm feature)
+web-sys = { version = "0.3", optional = true, features = [
+    "Navigator",
+    "Window",
+    "console",
+    "Usb",
+    "UsbDevice",
+    "UsbDeviceFilter",
+    "UsbDeviceRequestOptions",
+] }
+wasm-bindgen = { version = "0.2", optional = true }
+wasm-bindgen-futures = { version = "0.4", optional = true }
+js-sys = { version = "0.3", optional = true }
