--- a/crates/rflasher-wasm/Cargo.toml
+++ b/crates/rflasher-wasm/Cargo.toml
@@ -17,6 +17,7 @@ default = []
 rflasher-core = { path = "../rflasher-core", default-features = false, features = ["std", "alloc", "static-chips"] }
 rflasher-serprog = { path = "../rflasher-serprog", default-features = false, features = ["std", "wasm"] }
 rflasher-ch341a = { path = "../rflasher-ch341a", default-features = false, features = ["wasm"] }
+rflasher-ch347 = { path = "../rflasher-ch347", default-features = false, features = ["wasm"] }
 
 # GUI
 eframe = { version = "0.33", default-features = false, features = [
