--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Build WASM with Trunk
-        run: nix develop --command trunk build --release
+        run: nix develop --command trunk build --release --public-url /rflasher
         working-directory: crates/rflasher-wasm
 
       - name: Upload Pages artifact
