feat(ftdi): Add pure-Rust backend support via rs-ftdi
Add optional native Rust FTDI backend using rs-ftdi crate as an
alternative to C libftdi1 bindings. Introduces `ftdi-native` and
`all-programmers-native` feature flags to enable pure-Rust FTDI MPSSE
implementation backed by nusb.

- Add native_device and native_error modules with same public API
- Implement FtdiDevice wrapper using rs-ftdi for MPSSE operations
- Add feature flags for build-time backend selection
- Maintain backward compatibility with existing libftdi1 backend

Signed-off-by: Arthur Heymans <arthur@aheymans.xyz>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,8 @@ ch347 = ["rflasher-flash/ch347"]
 dediprog = ["rflasher-flash/dediprog"]
 serprog = ["rflasher-flash/serprog"]
 ftdi = ["rflasher-flash/ftdi"]
+# Use pure-Rust rs-ftdi backend for FTDI MPSSE (instead of C libftdi1)
+ftdi-native = ["rflasher-flash/ftdi-native"]
 ft4222 = ["rflasher-flash/ft4222"]
 linux-spi = ["rflasher-flash/linux-spi"]
 linux-mtd = ["rflasher-flash/linux-mtd"]
@@ -106,6 +108,8 @@ repl = ["dep:rflasher-repl"]
 
 # Enable all programmers
 all-programmers = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ftdi", "ft4222", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden"]
+# Enable all programmers with pure-Rust FTDI backend
+all-programmers-native = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ftdi-native", "ft4222", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden"]
 
 [dependencies]
 rflasher-core = { workspace = true, features = ["std", "is_sync"] }
