--- a/crates/rflasher-flash/Cargo.toml
+++ b/crates/rflasher-flash/Cargo.toml
@@ -35,6 +35,8 @@ ch347 = ["dep:rflasher-ch347"]
 dediprog = ["dep:rflasher-dediprog"]
 serprog = ["dep:rflasher-serprog"]
 ftdi = ["dep:rflasher-ftdi"]
+# Use pure-Rust rs-ftdi backend for FTDI MPSSE (instead of C libftdi1)
+ftdi-native = ["dep:rflasher-ftdi", "rflasher-ftdi/native"]
 ft4222 = ["dep:rflasher-ft4222"]
 linux-spi = ["dep:rflasher-linux-spi"]
 linux-mtd = ["dep:rflasher-linux-mtd"]
