feat(ftdi): add WASM/WebUSB backend, fix SFDP erase alignment, deduplicate FtdiConfig
Add a WebUSB backend for the FTDI MPSSE programmer using nusb with
maybe_async, following the same pattern as CH341A and CH347 WASM
implementations. Integrates into the web UI with device type, channel,
and SPI clock selection.

Fix a bug in the SFDP parser where EraseBlock::new() created all erase
types with count=1, causing them to be misclassified as chip erase
operations. This made erase fail with InvalidAlignment for any chip not
in the database. Use EraseBlock::with_count() with the correct count
derived from chip density.

Extract the triplicated FtdiConfig struct into protocol.rs as a single
shared definition. Add From<String> to all FtdiError types to bridge
the config validation errors. Filter the WASM channel selector based on
device_type.channel_count().

--- a/crates/rflasher-wasm/Cargo.toml
+++ b/crates/rflasher-wasm/Cargo.toml
@@ -18,6 +18,7 @@ rflasher-core = { path = "../rflasher-core", default-features = false, features 
 rflasher-serprog = { path = "../rflasher-serprog", default-features = false, features = ["std", "wasm"] }
 rflasher-ch341a = { path = "../rflasher-ch341a", default-features = false, features = ["wasm"] }
 rflasher-ch347 = { path = "../rflasher-ch347", default-features = false, features = ["wasm"] }
+rflasher-ftdi = { path = "../rflasher-ftdi", default-features = false, features = ["wasm"] }
 
 # GUI
 eframe = { version = "0.33", default-features = false, features = [
