--- a/crates/rflasher-ftdi/Cargo.toml
+++ b/crates/rflasher-ftdi/Cargo.toml
@@ -9,11 +9,11 @@ description = "FTDI MPSSE programmer support for rflasher"
 default = ["std"]
 std = ["rflasher-core/std", "is_sync", "ftdi", "nusb", "futures-lite"]
 # Use pure-Rust rs-ftdi backend instead of C libftdi1 bindings
-native = ["rflasher-core/std", "is_sync", "rs-ftdi", "nusb", "futures-lite"]
+native = ["rflasher-core/std", "is_sync", "rs-ftdi", "rs-ftdi/std", "nusb", "futures-lite"]
 # Sync mode - when enabled, async code is compiled as sync
 is_sync = ["rflasher-core/is_sync", "maybe-async/is_sync"]
-# WASM/WebUSB backend using nusb + maybe_async (async)
-wasm = ["rflasher-core/std", "nusb", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]
+# WASM/WebUSB backend using rs-ftdi + nusb (async)
+wasm = ["rflasher-core/std", "rs-ftdi", "rs-ftdi/wasm", "nusb", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]
 
 [dependencies]
 rflasher-core.workspace = true
@@ -23,8 +23,8 @@ maybe-async.workspace = true
 # FTDI support - using ftdi crate (libftdi1 bindings)
 ftdi = { version = "0.1", optional = true }
 
-# Pure-Rust FTDI backend
-rs-ftdi = { path = "../../../rs-ftdi", package = "ftdi", optional = true }
+# Pure-Rust FTDI backend (rs-ftdi with sync/async support)
+rs-ftdi = { git = "https://github.com/ArthurHeymans/rs-ftdi.git", branch = "WASM", package = "ftdi", default-features = false, optional = true }
 
 # USB device enumeration (for listing devices)
 nusb = { workspace = true, optional = true }
