feat(dediprog): Implement bulk read/write operations with async transfers
Add comprehensive SPI bulk read/write functionality matching flashprog behavior:
- Implement async ring-buffered bulk reads with up to 16 parallel transfers
- Add protocol-versioned command packet preparation (V1/V2/V3)
- Support aligned bulk operations with automatic residue handling via slow transceive
- Add BulkReadOp struct for configurable read operations (opcode, 4BA, dummy cycles)
- Implement spi_bulk_write with 512-byte padded transfers
- Add spi_write_256 and spi_write_aai methods for page program and SST modes
- Handle 4-byte addressing mode throughout read/write paths
- Fix device ID query to always read twice to prevent endpoint lockup
- Change io_mode from DpIoMode to Option<DpIoMode> to track uninitialized state
- Mark SpiMaster trait implementation as maybe_async with AFIT

Signed-off-by: Arthur Heymans <arthur@aheymans.xyz>

--- a/crates/rflasher-dediprog/Cargo.toml
+++ b/crates/rflasher-dediprog/Cargo.toml
@@ -13,4 +13,5 @@ std = ["rflasher-core/std", "nusb", "futures-lite"]
 rflasher-core.workspace = true
 nusb = { workspace = true, optional = true }
 futures-lite = { version = "2", optional = true }
+maybe-async.workspace = true
 log.workspace = true
